Creates LED row.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
             </div>
         </div>
 
+        <div id="16th-note-LEDs" class="row">
+        </div>
+
         <div id="track-list" class="row">
         </div>
     </div>
