Now steps can be selected or unselected.

--- a/index.html
+++ b/index.html
@@ -37,74 +37,7 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-3">
-                <div class="row">
-                    <div id="step-0" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">1</span>
-                    </div>
-                    <div id="step-1" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">2</span>
-                    </div>
-                    <div id="step-2" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">3</span>
-                    </div>
-                    <div id="step-3" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">4</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="row">
-                    <div id="step-4" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">5</span>
-                    </div>
-                    <div id="step-5" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">6</span>
-                    </div>
-                    <div id="step-6" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">7</span>
-                    </div>
-                    <div id="step-7" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">8</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="row">
-                    <div id="step-8" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">9</span>
-                    </div>
-                    <div id="step-9" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">10</span>
-                    </div>
-                    <div id="step-10" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">11</span>
-                    </div>
-                    <div id="step-11" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">12</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="row">
-                    <div id="step-12" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">13</span>
-                    </div>
-                    <div id="step-13" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">14</span>
-                    </div>
-                    <div id="step-14" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">15</span>
-                    </div>
-                    <div id="step-15" class="col-2 border border-2 rounded me-4 d-flex align-items-center justify-content-center">
-                        <span class="fs-4">16</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div id="16th-note-LEDs" class="row">
+        <div id="16th-notes" class="row">
         </div>
 
         <div id="track-list" class="row">
