Renames sound.js and track.js files.

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </div>
     </div>
 
-    <script src="js/track.js"></script>
-    <script src="js/sound.js"></script>
+    <script src="js/tracklist.js"></script>
+    <script src="js/soundlist.js"></script>
     <script src="js/sequencer.js"></script>
     <script src="js/main.js"></script>
 </body>
